--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "next-pizza",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
-  }
+   "name": "next-pizza",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint --dir src"
+   },
+   "dependencies": {
+      "clsx": "^2.1.1",
+      "next": "^15.1.5",
+      "nuqs": "^2.3.1",
+      "react": "^19.0.0",
+      "react-content-loader": "^7.0.2",
+      "react-dom": "^19.0.0"
+   },
+   "devDependencies": {
+      "@eslint/eslintrc": "^3.2.0",
+      "@feature-sliced/eslint-config": "^0.1.1",
+      "@headlessui/react": "^2.2.0",
+      "@svgr/webpack": "^8.1.0",
+      "@types/node": "^20",
+      "@types/react": "^19",
+      "@types/react-dom": "^19",
+      "autoprefixer": "^10.4.20",
+      "eslint": "^9",
+      "eslint-config-next": "15.1.5",
+      "eslint-config-prettier": "^10.0.1",
+      "eslint-plugin-boundaries": "^5.0.1",
+      "eslint-plugin-prettier": "^5.2.3",
+      "postcss": "^8",
+      "tailwind-variants": "^0.3.1",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+   }
 }
